<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/sub_navigation">

    <navigation
        android:id="@+id/sub_navigation"
        app:startDestination="@+id/nav_home"
        android:name="top.bilibililike.player.ui.home.HomeFragment"
        android:label="@string/menu_home">
        <fragment
            android:id="@+id/nav_home"
            android:name="top.bilibililike.player.widget.recommend.RecommendFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_recommend" >
        </fragment>
        <fragment
            android:id="@+id/nav_gallery"
            android:name="top.bilibililike.player.widget.live.liveFragment.LiveFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_live" >
        </fragment>

        <fragment
            android:id="@+id/nav_slideshow"
            android:name="top.bilibililike.player.widget.video.VideoFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_video" >
        </fragment>

    </navigation>



    <fragment
        android:id="@+id/nav_gallery"
        android:name="top.bilibililike.player.widget.live.liveFragment.LiveFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="top.bilibililike.player.widget.video.VideoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="top.bilibililike.player.widget.antivirus.ui.AntiVirusFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_antivirus" />

    <fragment
        android:id="@+id/nav_share"
        android:name="top.bilibililike.player.widget.bangumi.BangumiFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_bangumi" />

    <fragment
        android:id="@+id/nav_send"
        android:name="top.bilibililike.player.widget.hotspot.HotSpotFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_hotspot" />

</navigation>